# calculo-numerico

./: CMakeLists.txt  README.md  calculo_numerico.h  main  main.c
src/: calculo_numerico.h
test/: CMakeLists.txt  bisection.c  gaus_jordan.c  main  teste_commons.h  teste_gauss_eliminacao.c
